# project1-energy-analysis

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml  run_pipeline_and_push.sh  video_link.md
config/: config.yaml
dashboards/: app.py
data/processed/: chicago_processed.csv  houston_processed.csv  new_york_processed.csv  phoenix_processed.csv  seattle_processed.csv
data/raw/: eia_Chicago_2025-06-04_to_2025-09-02.json  eia_Chicago_2025-06-17_to_2025-09-15.json  eia_Houston_2025-06-04_to_2025-09-02.json  eia_Houston_2025-06-17_to_2025-09-15.json  eia_New_York_2025-06-04_to_2025-09-02.json  eia_New_York_2025-06-17_to_2025-09-15.json  eia_Phoenix_2025-06-04_to_2025-09-02.json  eia_Phoenix_2025-06-17_to_2025-09-15.json  eia_Seattle_2025-06-04_to_2025-09-02.json  eia_Seattle_2025-06-17_to_2025-09-15.json  noaa_Chicago_2025-06-04_to_2025-09-02.json  noaa_Chicago_2025-06-17_to_2025-09-15.json  noaa_Houston_2025-06-04_to_2025-09-02.json  noaa_Houston_2025-06-17_to_2025-09-15.json  noaa_New_York_2025-06-04_to_2025-09-02.json  noaa_New_York_2025-06-17_to_2025-09-15.json  noaa_Phoenix_2025-06-04_to_2025-09-02.json  noaa_Phoenix_2025-06-17_to_2025-09-15.json  noaa_Seattle_2025-06-04_to_2025-09-02.json  noaa_Seattle_2025-06-17_to_2025-09-15.json
reports/: data_quality_report.txt
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
tests/: test_pipeline.py
